vote and flag updating golos force, footer show number off payed golos, fix header elements visibility, update style for content, Post Index and etc #654

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -74,9 +74,10 @@ a, path, circle {
   margin: 5px;
 }
 
-.button.login {
-  border-color: #0B1B69;
+.button.violet {
+  border-color: #3F46AD;
   color: #3F46AD;
+  border-width: 2px;
 }
 
 @keyframes loading {
