--- a/app/components/modules/Footer.scss
+++ b/app/components/modules/Footer.scss
@@ -26,9 +26,9 @@
   li.big {
 		a {
       color: #333333;
-      font-size: 56px;
+      font-size: 20px;
       line-height: 66px;
-      font-weight: 400;
+      font-weight: bold;
     }
   }
 
